<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.reubens_pc.homeworkex1.MainActivity">

    <LinearLayout
        android:id="@+id/outerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/hadText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/matrix"
            android:textColor="@color/colorText"
            android:textSize="30dp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/upperPartButton"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/upper_part"
                android:onClick="upperPart"/>

            <Button
                android:id="@+id/diagonalsButton"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/diagonals"
                android:onClick="diagonals" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/downPartButton"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/down_part"
                android:onClick="downPart"/>

            <Button
                android:id="@+id/borderButton"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/border"
                android:onClick="border"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <EditText
            android:id="@+id/matrixNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/matrix_number"
            android:inputType="number"/>
            <Button
                android:id="@+id/setMatrix"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set_matrix"
                android:onClick="setMatrix"/>
        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
